--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
+    <link rel="icon" type="image/x-icon" href="game.ico">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" charset="UTF-8"> </script>
 </head>
